--- a/source_data/instances/vital_signs/temppb.yaml
+++ b/source_data/instances/vital_signs/temppb.yaml
@@ -1,17 +1,17 @@
 ---
 #TEMP
-- :label: "Peripheral Body Temperature"
+- name: "Peripheral Body Temperature"
   :identifier: "TEMPPB"
-  :based_on: http://www.s-cubed.dk/BASIC_OBS_PQR/V1#BCT
-  :identified_by: 
-    :label: "Test"
-    :enabled: true  
+  based_on: http://www.s-cubed.dk/BASIC_OBS_PQR/V1#BCT
+  identified_by:  
+    name: "Test"
+    enabled: true  
     :has_complex_datatype: 
      - 
       :short_name: CD 
       :has_property: 
       -
-        :label: "code"
+        name: "code"
         :question_text: ""
         :prompt_text: ""
         :format: "8"
@@ -20,23 +20,23 @@
           :cl: C66741
           :cli: C174371
       
-  :has_items:
-  - :label: "Date Time"
-    :enabled: true  
+  has_items:
+  - name: "Date Time"
+    enabled: true  
     :has_complex_datatype: 
     - :short_name: DATETIME
       :has_property: 
       - 
-        :label: "value"
+        name: "value"
         :question_text: "Date and time"
         :prompt_text: "Date Time"
         :format: ""
-  - :label: "Category Code"
-    :enabled: false
-  - :label: "Subcategory Code"
-    :enabled: false
-  - :label: "Position"
-    :enabled: true
+  - name: "Category Code"
+    enabled: false
+  - name: "Subcategory Code"
+    enabled: false
+  - name: "Position"
+    enabled: true
     :has_complex_datatype: 
     - 
       :short_name: CD
@@ -57,8 +57,8 @@
           :cl: C71148
           :cli: C62167
 
-  - :label: "Site of Administration"
-    :enabled: true
+  - name: "Site of Administration"
+    enabled: true
     :collet: false
     :has_complex_datatype: 
     - 
@@ -74,8 +74,8 @@
           :cl: C74456 
           :cli: C32141 
 
-  - :label: "Laterality"
-    :enabled: true
+  - name: "Laterality"
+    enabled: true
     :has_complex_datatype: 
     - 
       :short_name: CD
@@ -96,26 +96,26 @@
           :cl: C99073
           :cli: C13332
 
-  - :label: "Method"
-    :enabled: false 
-  - :label: "Not Done"
-    :enabled: false
-  - :label: "Reason Not Done"
-    :enabled: false 
-  - :label: "Result"
-    :enabled: true  
+  - name: "Method"
+    enabled: false 
+  - name: "Not Done"
+    enabled: false
+  - name: "Reason Not Done"
+    enabled: false 
+  - name: "Result"
+    enabled: true  
     :has_complex_datatype: 
     - 
       :short_name: PQR
       :has_property: 
       - 
-        :label: "value"
+        name: "value"
         :question_text: "Peripheral Body Temperature"
         :prompt_text: "Result"
         :format: "5.2"
         :has_coded_value: []
       - 
-        :label: "code"
+        name: "code"
         :question_text: "Unit"
         :prompt_text: "Unit"
         :format: "20"
