--- a/source_data/instances/electrocardiogram/eg.yaml
+++ b/source_data/instances/electrocardiogram/eg.yaml
@@ -1,17 +1,17 @@
 ---
 #ECG - INTP
-- :label: "Electrocardiogram Interpretation"
+- name: "Electrocardiogram Interpretation"
   :identifier: "INTP"
-  :based_on: http://www.s-cubed.dk/BASIC_OBS_CD/V1#BCT
-  :identified_by: 
-    :label: "Test"
-    :enabled: true  
+  based_on: http://www.s-cubed.dk/BASIC_OBS_CD/V1#BCT
+  identified_by:  
+    name: "Test"
+    enabled: true  
     :has_complex_datatype: 
      - 
       :short_name: CD 
       :has_property: 
       -
-        :label: "code"
+        name: "code"
         :question_text: ""
         :prompt_text: ""
         :format: "8"
@@ -19,31 +19,31 @@
         - 
           :cl: C71153
           :cli: C41255     
-  :has_items:
-  - :label: "Category Code"
-    :enabled: false
-  - :label: "Subcategory Code"
-    :enabled: false
-  - :label: "Position"
-    :enabled: false
-  - :label: "Site of Administration"
-    :enabled: false
-  - :label: "Laterality"
-    :enabled: false
-  - :label: "Method"
-    :enabled: false 
-  - :label: "Not Done"
-    :enabled: false
-  - :label: "Reason Not Done"
-    :enabled: false 
-  - :label: "Result"
-    :enabled: true  
+  has_items:
+  - name: "Category Code"
+    enabled: false
+  - name: "Subcategory Code"
+    enabled: false
+  - name: "Position"
+    enabled: false
+  - name: "Site of Administration"
+    enabled: false
+  - name: "Laterality"
+    enabled: false
+  - name: "Method"
+    enabled: false 
+  - name: "Not Done"
+    enabled: false
+  - name: "Reason Not Done"
+    enabled: false 
+  - name: "Result"
+    enabled: true  
     :has_complex_datatype: 
     - 
       :short_name: CD
       :has_property: 
       - 
-        :label: "code"
+        name: "code"
         :question_text: "Overall result"
         :prompt_text: "Overall result"
         :format: "20"
