--- a/source_data/instances/laboratory/lb.yaml
+++ b/source_data/instances/laboratory/lb.yaml
@@ -1,30 +1,30 @@
 ---
 # GLUCOSE
-- :name: "Glucose"
-  :based_on: "Base Laboratory"
+- name: "Glucose"
+  based_on: "Base Laboratory"
   :narrower: 
   - "Glucose in blood"
   - "Glucose in serum"
   - "Glucose in urine"
-  :identified_by: 
-    :name: "Test"
-    :enabled: true 
-    :collect: false 
-    :data_type: 
+  identified_by:  
+    name: "Test"
+    enabled: true 
+    collect: false 
+    data_type: 
      - 
-      :name: coding
-      :value_set:
+      name: coding
+      value_set:
       - 
         :cl: C65047
         :cli: C105585
-  :has_items:
-  - :name: "Specimen"
-    :enabled: true
-    :collect: true
-    :data_type: 
+  has_items:
+  - name: "Specimen"
+    enabled: true
+    collect: true
+    data_type: 
     - 
-      :name: coding
-      :value_set:
+      name: coding
+      value_set:
       - 
         :cl: C78734
         :cli: C13283
@@ -34,159 +34,159 @@
       - 
         :cl: C78734
         :cli: C12434
-  - :name: "Position"
-    :enabled: false
-  - :name: "Site of Administration"
-    :enabled: false
-  - :name: "Laterality"
-    :enabled: false
-  - :name: "Method"
-    :enabled: false 
-  - :name: "Result"
-    :enabled: true  
-    :collect: true
-    :data_type: 
+  - name: "Position"
+    enabled: false
+  - name: "Site of Administration"
+    enabled: false
+  - name: "Laterality"
+    enabled: false
+  - name: "Method"
+    enabled: false 
+  - name: "Result"
+    enabled: true  
+    collect: true
+    data_type: 
     - 
-      :name: quantity
-      :value_set:
+      name: quantity
+      value_set:
       - 
         :cl: C71620
         :cli: C25613
       - 
         :cl: C71620
         :cli: C111253
-- :name: "Glucose in blood"
-  :based_on: "Base Laboratory"
-  :identified_by: 
-    :name: "Test"
-    :enabled: true 
-    :collect: false 
+- name: "Glucose in blood"
+  based_on: "Base Laboratory"
+  identified_by:  
+    name: "Test"
+    enabled: true 
+    collect: false 
     :qualified_by: "Specimen"
-    :data_type: 
+    data_type: 
      - 
-      :name: coding
-      :value_set:
+      name: coding
+      value_set:
       - 
         :cl: C65047
         :cli: C105585
-  :has_items:
-  - :name: "Specimen"
-    :enabled: true
-    :collect: true
-    :data_type: 
+  has_items:
+  - name: "Specimen"
+    enabled: true
+    collect: true
+    data_type: 
     - 
-      :name: coding
-      :value_set:
+      name: coding
+      value_set:
       - 
         :cl: C78734
         :cli: C12434
-  - :name: "Position"
-    :enabled: false
-  - :name: "Site of Administration"
-    :enabled: false
-  - :name: "Laterality"
-    :enabled: false
-  - :name: "Method"
-    :enabled: false 
-  - :name: "Result"
-    :enabled: true  
-    :collect: true
-    :data_type: 
+  - name: "Position"
+    enabled: false
+  - name: "Site of Administration"
+    enabled: false
+  - name: "Laterality"
+    enabled: false
+  - name: "Method"
+    enabled: false 
+  - name: "Result"
+    enabled: true  
+    collect: true
+    data_type: 
     - 
-      :name: quantity
-      :value_set:
+      name: quantity
+      value_set:
       - 
         :cl: C71620
         :cli: C25613
       - 
         :cl: C71620
         :cli: C111253
-- :name: "Glucose in serum"
-  :based_on: "Base Laboratory"
-  :identified_by: 
-    :name: "Test"
-    :enabled: true 
-    :collect: false 
+- name: "Glucose in serum"
+  based_on: "Base Laboratory"
+  identified_by:  
+    name: "Test"
+    enabled: true 
+    collect: false 
     :qualified_by: "Specimen"
-    :data_type: 
+    data_type: 
      - 
-      :name: coding
-      :value_set:
+      name: coding
+      value_set:
       - 
         :cl: C65047
         :cli: C105585
-  :has_items:
-  - :name: "Specimen"
-    :enabled: true
-    :collect: true
-    :data_type: 
+  has_items:
+  - name: "Specimen"
+    enabled: true
+    collect: true
+    data_type: 
     - 
-      :name: coding
-      :value_set:
+      name: coding
+      value_set:
       -
         :cl: C78734
         :cli: C13325
-  - :name: "Position"
-    :enabled: false
-  - :name: "Site of Administration"
-    :enabled: false
-  - :name: "Laterality"
-    :enabled: false
-  - :name: "Method"
-    :enabled: false 
-  - :name: "Result"
-    :enabled: true  
-    :collect: true
-    :data_type: 
+  - name: "Position"
+    enabled: false
+  - name: "Site of Administration"
+    enabled: false
+  - name: "Laterality"
+    enabled: false
+  - name: "Method"
+    enabled: false 
+  - name: "Result"
+    enabled: true  
+    collect: true
+    data_type: 
     - 
-      :name: quantity
-      :value_set:
+      name: quantity
+      value_set:
       - 
         :cl: C71620
         :cli: C25613
       - 
         :cl: C71620
         :cli: C111253
-- :name: "Glucose in urine"
-  :based_on: "Base Laboratory"
-  :identified_by: 
-    :name: "Test"
-    :enabled: true 
-    :collect: false 
+- name: "Glucose in urine"
+  based_on: "Base Laboratory"
+  identified_by:  
+    name: "Test"
+    enabled: true 
+    collect: false 
     :qualified_by: "Specimen"
-    :data_type: 
+    data_type: 
      - 
-      :name: coding
-      :value_set:
+      name: coding
+      value_set:
       - 
         :cl: C65047
         :cli: C105585
-  :has_items:
-  - :name: "Specimen"
-    :enabled: true
-    :collect: true
-    :data_type: 
+  has_items:
+  - name: "Specimen"
+    enabled: true
+    collect: true
+    data_type: 
     - 
-      :name: coding
-      :value_set:
+      name: coding
+      value_set:
       - 
         :cl: C78734
         :cli: C13283
-  - :name: "Position"
-    :enabled: false
-  - :name: "Site of Administration"
-    :enabled: false
-  - :name: "Laterality"
-    :enabled: false
-  - :name: "Method"
-    :enabled: false 
-  - :name: "Result"
-    :enabled: true  
-    :collect: true
-    :data_type: 
+  - name: "Position"
+    enabled: false
+  - name: "Site of Administration"
+    enabled: false
+  - name: "Laterality"
+    enabled: false
+  - name: "Method"
+    enabled: false 
+  - name: "Result"
+    enabled: true  
+    collect: true
+    data_type: 
     - 
-      :name: quantity
-      :value_set:
+      name: quantity
+      value_set:
       - 
         :cl: C71620
         :cli: C25613
