--- a/source_data/instances/vital_signs/frmsize.yaml
+++ b/source_data/instances/vital_signs/frmsize.yaml
@@ -1,18 +1,18 @@
 ---
 #RACE
-- :label: "Body Frame Size"
+- name: "Body Frame Size"
   :identifier: "FRMSIZE"
-  :based_on: http://www.s-cubed.dk/BASIC_OBS_CD/V1#BCT
-  :identified_by: 
-    :label: "Test"
-    :enabled: true
-    :collect: false  
+  based_on: http://www.s-cubed.dk/BASIC_OBS_CD/V1#BCT
+  identified_by:  
+    name: "Test"
+    enabled: true
+    collect: false  
     :has_complex_datatype: 
      - 
       :short_name: CD 
       :has_property: 
       -
-        :label: "code"
+        name: "code"
         :question_text: ""
         :prompt_text: ""
         :format: "8"
@@ -21,25 +21,25 @@
           :cl: C66741
           :cli: C49680
       
-  :has_items:
-  - :label: "Category Code"
-    :enabled: false
-  - :label: "Subcategory Code"
-    :enabled: false
-  - :label: "Position"
-    :enabled: false
-  - :label: "Site of Administration"
-    :enabled: false
-  - :label: "Laterality"
-    :enabled: false
-  - :label: "Method"
-    :enabled: false 
-  - :label: "Not Done"
-    :enabled: false
-  - :label: "Reason Not Done"
-    :enabled: false 
-  - :label: "Result"
-    :enabled: true  
+  has_items:
+  - name: "Category Code"
+    enabled: false
+  - name: "Subcategory Code"
+    enabled: false
+  - name: "Position"
+    enabled: false
+  - name: "Site of Administration"
+    enabled: false
+  - name: "Laterality"
+    enabled: false
+  - name: "Method"
+    enabled: false 
+  - name: "Not Done"
+    enabled: false
+  - name: "Reason Not Done"
+    enabled: false 
+  - name: "Result"
+    enabled: true  
     :has_complex_datatype: 
     - 
       :short_name: CD
