--- a/source_data/instances/vital_signs/pulse.yaml
+++ b/source_data/instances/vital_signs/pulse.yaml
@@ -1,18 +1,18 @@
 ---
 #BMI
-- :label: "Pulse Rate"
+- name: "Pulse Rate"
   :identifier: "PULSE"
-  :based_on: http://www.s-cubed.dk/BASIC_OBS_PQR/V1#BCT
-  :identified_by: 
-    :label: "Test"
-    :enabled: true 
-    :collect: false 
+  based_on: http://www.s-cubed.dk/BASIC_OBS_PQR/V1#BCT
+  identified_by:  
+    name: "Test"
+    enabled: true 
+    collect: false 
     :has_complex_datatype: 
      - 
       :short_name: CD 
       :has_property: 
       -
-        :label: "code"
+        name: "code"
         :question_text: ""
         :prompt_text: ""
         :format: "8"
@@ -21,13 +21,13 @@
           :cl: C66741
           :cli: C49676
       
-  :has_items:
-  - :label: "Category Code"
-    :enabled: false
-  - :label: "Subcategory Code"
-    :enabled: false
-  - :label: "Position"
-    :enabled: true
+  has_items:
+  - name: "Category Code"
+    enabled: false
+  - name: "Subcategory Code"
+    enabled: false
+  - name: "Position"
+    enabled: true
     :has_complex_datatype: 
     - 
       :short_name: CD
@@ -86,30 +86,30 @@
         - 
           :cl: C71148 
           :cli: C90480
-  - :label: "Site of Administration"
-    :enabled: false
-  - :label: "Laterality"
-    :enabled: false
-  - :label: "Method"
-    :enabled: false 
-  - :label: "Not Done"
-    :enabled: false
-  - :label: "Reason Not Done"
-    :enabled: false 
-  - :label: "Result"
-    :enabled: true  
+  - name: "Site of Administration"
+    enabled: false
+  - name: "Laterality"
+    enabled: false
+  - name: "Method"
+    enabled: false 
+  - name: "Not Done"
+    enabled: false
+  - name: "Reason Not Done"
+    enabled: false 
+  - name: "Result"
+    enabled: true  
     :has_complex_datatype: 
     - 
       :short_name: PQR
       :has_property: 
       - 
-        :label: "value"
+        name: "value"
         :question_text: "Pulse Rate"
         :prompt_text: "Result"
         :format: "4.1"
         :has_coded_value: []
       - 
-        :label: "code"
+        name: "code"
         :question_text: "Unit"
         :prompt_text: "Unit"
         :format: "20"
