--- a/source_data/instances/adverse_events/ae.yaml
+++ b/source_data/instances/adverse_events/ae.yaml
@@ -10,8 +10,8 @@
       name: coding
       value_set:
       - 
-        :cl: D000001
-        :cli: D100004
+        cl: D000001
+        cli: D100004
   has_items:
   - name: "Event"
     enabled: true
