--- a/source_data/instances/vital_signs/temp.yaml
+++ b/source_data/instances/vital_signs/temp.yaml
@@ -6,95 +6,95 @@
   identified_by:  
     name: "Test"
     enabled: true  
-    :has_complex_datatype: 
+    has_complex_datatype: 
      - 
-      :short_name: CD 
-      :has_property: 
+      short_name: CD 
+      has_property: 
       -
         name: "code"
-        :question_text: ""
-        :prompt_text: ""
-        :format: "8"
-        :has_coded_value:
+        question_text: ""
+        prompt_text: ""
+        format: "8"
+        has_coded_value:
         - 
-          :cl: C66741
-          :cli: C25206
+          cl: C66741
+          cli: C25206
       
   has_items:
   - name: "Date Time"
     enabled: true  
-    :has_complex_datatype: 
-    - :short_name: DATETIME
-      :has_property: 
+    has_complex_datatype: 
+    - short_name: DATETIME
+      has_property: 
       - 
         name: "value"
-        :question_text: "Date and time"
-        :prompt_text: "Date Time"
-        :format: ""
+        question_text: "Date and time"
+        prompt_text: "Date Time"
+        format: ""
   - name: "Category Code"
     enabled: false
   - name: "Subcategory Code"
     enabled: false
   - name: "Position"
     enabled: true
-    :has_complex_datatype: 
+    has_complex_datatype: 
     - 
-      :short_name: CD
-      :has_property: 
+      short_name: CD
+      has_property: 
       - 
         :label: code
-        :question_text: "Body Position"
-        :prompt_text: "Position"
-        :format: "40"
-        :has_coded_value:
+        question_text: "Body Position"
+        prompt_text: "Position"
+        format: "40"
+        has_coded_value:
         - 
-          :cl: C71148 
-          :cli: C62166
+          cl: C71148 
+          cli: C62166
         - 
-          :cl: C71148 
-          :cli: C62122
+          cl: C71148 
+          cli: C62122
         - 
-          :cl: C71148
-          :cli: C62167
+          cl: C71148
+          cli: C62167
 
   - name: "Site of Administration"
     enabled: true
-    :collet: false
-    :has_complex_datatype: 
+    collect: false
+    has_complex_datatype: 
     - 
-      :short_name: CD
-      :has_property: 
+      short_name: CD
+      has_property: 
       - 
         :label: code
-        :question_text: "Location of Measurement"
-        :prompt_text: "Location"
-        :format: "40"
-        :has_coded_value:
+        question_text: "Location of Measurement"
+        prompt_text: "Location"
+        format: "40"
+        has_coded_value:
         - 
-          :cl: C74456 
-          :cli: C32141 
+          cl: C74456 
+          cli: C32141 
 
   - name: "Laterality"
     enabled: true
-    :has_complex_datatype: 
+    has_complex_datatype: 
     - 
-      :short_name: CD
-      :has_property: 
+      short_name: CD
+      has_property: 
       - 
         :label: code
-        :question_text: "Laterality"
-        :prompt_text: "Laterality"
-        :format: "40"
-        :has_coded_value:
+        question_text: "Laterality"
+        prompt_text: "Laterality"
+        format: "40"
+        has_coded_value:
         - 
-          :cl: C99073 
-          :cli: C25229
+          cl: C99073 
+          cli: C25229
         - 
-          :cl: C99073 
-          :cli: C25228
+          cl: C99073 
+          cli: C25228
         - 
-          :cl: C99073
-          :cli: C13332
+          cl: C99073
+          cli: C13332
 
   - name: "Method"
     enabled: false 
@@ -104,28 +104,28 @@
     enabled: false 
   - name: "Result"
     enabled: true  
-    :has_complex_datatype: 
+    has_complex_datatype: 
     - 
-      :short_name: PQR
-      :has_property: 
+      short_name: PQR
+      has_property: 
       - 
         name: "value"
-        :question_text: "Result"
-        :prompt_text: "Result"
-        :format: "5.2"
-        :has_coded_value: []
+        question_text: "Result"
+        prompt_text: "Result"
+        format: "5.2"
+        has_coded_value: []
       - 
         name: "code"
-        :question_text: "Unit"
-        :prompt_text: "Unit"
-        :format: "20"
-        :has_coded_value:
+        question_text: "Unit"
+        prompt_text: "Unit"
+        format: "20"
+        has_coded_value:
         - 
-          :cl: C71620
-          :cli: C42559
+          cl: C71620
+          cli: C42559
         - 
-          :cl: C66770
-          :cli: C44277
+          cl: C66770
+          cli: C44277
         - 
-          :cl: C66770
-          :cli: C42537
+          cl: C66770
+          cli: C42537
