--- a/source_data/templates/templates.yaml
+++ b/source_data/templates/templates.yaml
@@ -2,248 +2,248 @@
 - name: "Base Observation"
   identified_by:  
     name: "Test"
-    :mandatory: true
+    mandatory: true
     enabled: true  
-    :canonical: TEST  
+    canonical: TEST  
     data_type: 
     - name: coding 
   has_items:
   - name: "Position"
-    :mandatory: false
+    mandatory: false
     enabled: true
     data_type: 
     - name: coding
   - name: "Site of Administration"
-    :mandatory: false
+    mandatory: false
     enabled: true  
     data_type: 
     - name: coding
   - name: "Laterality"
-    :mandatory: false
+    mandatory: false
     enabled: true  
-    :canonical: LATERALITY
+    canonical: LATERALITY
     data_type: 
     - name: coding
   - name: "Method"
-    :mandatory: false
+    mandatory: false
     enabled: true  
     data_type: 
     - name: coding
   - name: "Date Time"
-    :mandatory: true
+    mandatory: true
     enabled: true  
-    :canonical: "DATE TIME"  
+    canonical: "DATE TIME"  
     data_type: 
     - name: date_time
   - name: "Result"
-    :mandatory: true
+    mandatory: true
     enabled: true  
-    :canonical: RESULT
+    canonical: RESULT
     data_type: 
     - name: quantity
     - name: coding
   - name: "Result Other"
-    :mandatory: false
+    mandatory: false
     enabled: true  
-    :canonical: "RESULT OTHER"
+    canonical: "RESULT OTHER"
     data_type: 
     - name: string
 - name: "Base Laboratory"
   identified_by:  
     name: "Test"
-    :mandatory: true
+    mandatory: true
     enabled: true  
-    :canonical: TEST  
+    canonical: TEST  
     data_type: 
     - name: coding 
   has_items:
   - name: "Position"
-    :mandatory: false
+    mandatory: false
     enabled: true  
     data_type: 
     - name: coding
   - name: "Site of Administration"
-    :mandatory: false
+    mandatory: false
     enabled: true  
     data_type: 
     - name: coding
   - name: "Laterality"
-    :mandatory: false
+    mandatory: false
     enabled: true  
     data_type: 
     - name: coding
   - name: "Directionality"
-    :mandatory: false
+    mandatory: false
     enabled: true  
     data_type: 
     - name: coding
   - name: "Method"
-    :mandatory: false
+    mandatory: false
     enabled: true  
     data_type: 
     - name: coding
   - name: "Date Time"
-    :mandatory: true
+    mandatory: true
     enabled: true  
-    :canonical: "DATE TIME"  
+    canonical: "DATE TIME"  
     data_type: 
     - name: date_time
   - name: "Result"
-    :mandatory: true
+    mandatory: true
     enabled: true  
     data_type: 
     - name: quantity
     - name: coding
   - name: "Specimen"
-    :mandatory: false
+    mandatory: false
     enabled: true  
     data_type: 
     - name: coding
 - name: "Event Observation"
   identified_by:  
     name: "Event Type"
-    :mandatory: true
+    mandatory: true
     enabled: true  
     data_type: 
     - name: coding
   has_items:
   - name: "Event"
-    :mandatory: true
+    mandatory: true
     enabled: true  
-    :canonical: TERM  
+    canonical: TERM  
     data_type: 
     - name: codeable_concept
   - name: "Serious Event"
-    :mandatory: false
+    mandatory: false
     enabled: true  
     data_type: 
     - name: coding
   - name: "Severity"
-    :mandatory: false
+    mandatory: false
     enabled: true  
     data_type: 
     - name: coding
   - name: "Causality"
-    :mandatory: false
+    mandatory: false
     enabled: true  
     data_type: 
     - name: coding
   - name: "Relationship to Non-Study Treatment"
-    :mandatory: false
+    mandatory: false
     enabled: true  
     data_type: 
     - name: coding
   - name: "Action taken"
-    :mandatory: false
+    mandatory: false
     enabled: true  
     data_type: 
     - name: coding
   - name: "Other Action Taken"
-    :mandatory: false
+    mandatory: false
     enabled: true  
     data_type: 
     - name: coding
   - name: "Concomitant or Additional Treatment Given"
-    :mandatory: false
+    mandatory: false
     enabled: true  
     data_type: 
     - name: coding
   - name: "Outcome"
-    :mandatory: false
+    mandatory: false
     enabled: true  
     data_type: 
     - name: coding
   - name: "Pattern of Event"
-    :mandatory: false
+    mandatory: false
     enabled: true  
     data_type: 
     - name: coding
   - name: "Hospitalization Required"
-    :mandatory: false
+    mandatory: false
     enabled: true  
     data_type: 
     - name: coding
   - name: "Is Life Threatening"
-    :mandatory: false
+    mandatory: false
     enabled: true  
     data_type: 
     - name: coding
   - name: "Occurred with Overdose"
-    :mandatory: false
+    mandatory: false
     enabled: true  
     data_type: 
     - name: coding
   - name: "Other Medically Important Serious Event"
-    :mandatory: false
+    mandatory: false
     enabled: true  
     data_type: 
     - name: coding
   - name: "Involves Cancer"
-    :mandatory: false
+    mandatory: false
     enabled: true  
     data_type: 
     - name: coding
   - name: "Results in Death"
-    :mandatory: false
+    mandatory: false
     enabled: true  
     data_type: 
     - name: coding
   - name: "Standard Toxicity Grade"
-    :mandatory: false
+    mandatory: false
     enabled: true  
     data_type: 
     - name: coding
   - name: "Start Date Time"
-    :mandatory: true
+    mandatory: true
     enabled: true
-    :canonical: "PERIOD START"      
+    canonical: "PERIOD START"      
     data_type: 
     - name: date_time
   - name: "End Date Time"
-    :mandatory: true
+    mandatory: true
     enabled: true  
-    :canonical: "PERIOD END"      
+    canonical: "PERIOD END"      
     data_type: 
     - name: date_time
   - name: "Location of Event"
-    :mandatory: false
+    mandatory: false
     enabled: true  
     data_type: 
     - name: coding
   - name: "Congenital Anomaly or Birth Defect"
-    :mandatory: false
+    mandatory: false
     enabled: true  
     data_type: 
     - name: coding
   - name: "Persist or Significant Disability/Incapacity"
-    :mandatory: false
+    mandatory: false
     enabled: true  
     data_type: 
     - name: coding
 - name: "Intervention"
   identified_by:  
     name: "Intervention Type"
-    :mandatory: true
+    mandatory: true
     enabled: true  
     data_type: 
     - name: coding
   has_items:
   - name: "Intervention"
-    :mandatory: true
+    mandatory: true
     enabled: true  
-    :canonical: TREATMENT
+    canonical: TREATMENT
     data_type: 
     - name: codeable_concept
   - name: "Start Date Time"
-    :mandatory: true
+    mandatory: true
     enabled: true
-    :canonical: "PERIOD START"      
+    canonical: "PERIOD START"      
     data_type: 
     - name: date_time
   - name: "End Date Time"
-    :mandatory: true
+    mandatory: true
     enabled: true  
-    :canonical: "PERIOD END"      
+    canonical: "PERIOD END"      
     data_type: 
     - name: date_time
 
