--- a/source_data/instances/vital_signs/sysbp.yaml
+++ b/source_data/instances/vital_signs/sysbp.yaml
@@ -1,7 +1,7 @@
 ---
 - name: "Systolic Blood Pressure"
   :identifier: "SYSBP"
-  based_on: http://www.s-cubed.dk/BASIC_OBS_PQR/V1#BCT
+  based_on: "Base Observation"
   identified_by:  
     name: "Test"
     enabled: true 
