--- a/source_data/instances/vital_signs/ulnarl.yaml
+++ b/source_data/instances/vital_signs/ulnarl.yaml
@@ -2,7 +2,7 @@
 #WEIGHT
 - name: "Ulnar Length"
   :identifier: "ULNARL"
-  based_on: http://www.s-cubed.dk/BASIC_OBS_PQR/V1#BCT
+  based_on: "Base Observation"
   identified_by:  
     name: "Test"
     enabled: true 
