--- a/source_data/instances/vital_signs/diabp.yaml
+++ b/source_data/instances/vital_signs/diabp.yaml
@@ -2,7 +2,7 @@
 #DIABP
 - name: "Diastolic Blood Pressure"
   :identifier: "DIABP"
-  based_on: http://www.s-cubed.dk/BASIC_OBS_PQR/V1#BCT
+  based_on: "Base Observation"
   identified_by:  
     name: "Test"
     enabled: true
