--- a/source_data/instances/vital_signs/frmsize.yaml
+++ b/source_data/instances/vital_signs/frmsize.yaml
@@ -2,7 +2,7 @@
 #RACE
 - name: "Body Frame Size"
   :identifier: "FRMSIZE"
-  based_on: http://www.s-cubed.dk/BASIC_OBS_CD/V1#BCT
+  based_on: "Base Observation"
   identified_by:  
     name: "Test"
     enabled: true
