--- a/source_data/instances/vital_signs/hr.yaml
+++ b/source_data/instances/vital_signs/hr.yaml
@@ -2,7 +2,7 @@
 #HR
 - name: "Heart Rate"
   :identifier: "HR"
-  based_on: http://www.s-cubed.dk/BASIC_OBS_PQR/V1#BCT
+  based_on: "Base Observation"
   identified_by:  
     name: "Test"
     enabled: true  
