--- a/source_data/instances/vital_signs/pulse.yaml
+++ b/source_data/instances/vital_signs/pulse.yaml
@@ -2,7 +2,7 @@
 #BMI
 - name: "Pulse Rate"
   :identifier: "PULSE"
-  based_on: http://www.s-cubed.dk/BASIC_OBS_PQR/V1#BCT
+  based_on: "Base Observation"
   identified_by:  
     name: "Test"
     enabled: true 
