--- a/source_data/instances/vital_signs/resp.yaml
+++ b/source_data/instances/vital_signs/resp.yaml
@@ -2,7 +2,7 @@
 #WEIGHT
 - name: "Respiratory Rate"
   :identifier: "RESP"
-  based_on: http://www.s-cubed.dk/BASIC_OBS_PQR/V1#BCT
+  based_on: "Base Observation"
   identified_by:  
     name: "Test"
     enabled: true 
