--- a/source_data/instances/vital_signs/tbw.yaml
+++ b/source_data/instances/vital_signs/tbw.yaml
@@ -2,7 +2,7 @@
 #WEIGHT
 - name: "Total Body Water Measurement"
   :identifier: "TBW"
-  based_on: http://www.s-cubed.dk/BASIC_OBS_PQR/V1#BCT
+  based_on: "Base Observation"
   identified_by:  
     name: "Test"
     enabled: true 
