--- a/source_data/instances/vital_signs/temp.yaml
+++ b/source_data/instances/vital_signs/temp.yaml
@@ -2,7 +2,7 @@
 #TEMP
 - name: "Temperature"
   :identifier: "TEMP"
-  based_on: http://www.s-cubed.dk/BASIC_OBS_PQR/V1#BCT
+  based_on: "Base Observation"
   identified_by:  
     name: "Test"
     enabled: true  
