Combine stages and add conversion utility

--- a/source_data/instances/electrocardiogram/eg.yaml
+++ b/source_data/instances/electrocardiogram/eg.yaml
@@ -1,7 +1,7 @@
 ---
 #ECG - INTP
 - name: "Electrocardiogram Interpretation"
-  :identifier: "INTP"
+  identifier: "INTP"
   based_on: "Base Observation"
   identified_by:  
     name: "Test"
