--- a/source_data/instances/vital_signs/bsa.yaml
+++ b/source_data/instances/vital_signs/bsa.yaml
@@ -1,7 +1,7 @@
 ---
 #WEIGHT
 - name: "Body Surface Area"
-  :identifier: "BSA"
+  identifier: "BSA"
   based_on: "Base Observation"
   identified_by:  
     name: "Test"
