--- a/source_data/instances/vital_signs/chestcir.yaml
+++ b/source_data/instances/vital_signs/chestcir.yaml
@@ -1,7 +1,7 @@
 ---
 #WEIGHT
 - name: "Chest Circumference"
-  :identifier: "CHESTCIR"
+  identifier: "CHESTCIR"
   based_on: "Base Observation"
   identified_by:  
     name: "Test"
