--- a/source_data/instances/vital_signs/eweight.yaml
+++ b/source_data/instances/vital_signs/eweight.yaml
@@ -1,7 +1,6 @@
 ---
-#WEIGHT
 - name: "Estimated Body Weight"
-  :identifier: "EWEIGHT"
+  identifier: "EWEIGHT"
   based_on: "Base Observation"
   identified_by:  
     name: "Test"
