--- a/source_data/instances/vital_signs/farmcir.yaml
+++ b/source_data/instances/vital_signs/farmcir.yaml
@@ -1,6 +1,6 @@
 ---
 - name: "Hip Circumference"
-  :identifier: "HIPCIR"
+  identifier: "HIPCIR"
   based_on: "Base Observation"
   identified_by:  
     name: "Test"
