--- a/source_data/instances/vital_signs/fio2.yaml
+++ b/source_data/instances/vital_signs/fio2.yaml
@@ -1,7 +1,7 @@
 ---
 #WEIGHT
 - name: "Fraction of Inspired Oxygen"
-  :identifier: "FIO2"
+  identifier: "FIO2"
   based_on: "Base Observation"
   identified_by:  
     name: "Test"
