--- a/source_data/instances/vital_signs/ftmandl.yaml
+++ b/source_data/instances/vital_signs/ftmandl.yaml
@@ -1,7 +1,7 @@
 ---
 #WEIGHT
 - name: "Fetal Mandibular Length"
-  :identifier: "FTMANDL"
+  identifier: "FTMANDL"
   based_on: "Base Observation"
   identified_by:  
     name: "Test"
