--- a/source_data/instances/vital_signs/hr.yaml
+++ b/source_data/instances/vital_signs/hr.yaml
@@ -1,7 +1,7 @@
 ---
 #HR
 - name: "Heart Rate"
-  :identifier: "HR"
+  identifier: "HR"
   based_on: "Base Observation"
   identified_by:  
     name: "Test"
