--- a/source_data/instances/vital_signs/idealwt.yaml
+++ b/source_data/instances/vital_signs/idealwt.yaml
@@ -1,7 +1,7 @@
 ---
 #WEIGHT
 - name: "Ideal Body Weight"
-  :identifier: "IDEALWT"
+  identifier: "IDEALWT"
   based_on: "Base Observation"
   identified_by:  
     name: "Test"
