--- a/source_data/instances/vital_signs/kneeheel.yaml
+++ b/source_data/instances/vital_signs/kneeheel.yaml
@@ -1,6 +1,6 @@
 ---
 - name: "Knee to Heel Length Measurement"
-  :identifier: "KNEEHEEL"
+  identifier: "KNEEHEEL"
   based_on: "Base Observation"
   identified_by:  
     name: "Test"
