--- a/source_data/instances/vital_signs/neckcir.yaml
+++ b/source_data/instances/vital_signs/neckcir.yaml
@@ -1,6 +1,6 @@
 ---
 - name: "Neck Circumference"
-  :identifier: "NECKCIR"
+  identifier: "NECKCIR"
   based_on: "Base Observation"
   identified_by:  
     name: "Test"
