--- a/source_data/instances/vital_signs/pulse.yaml
+++ b/source_data/instances/vital_signs/pulse.yaml
@@ -1,7 +1,7 @@
 ---
 #BMI
 - name: "Pulse Rate"
-  :identifier: "PULSE"
+  identifier: "PULSE"
   based_on: "Base Observation"
   identified_by:  
     name: "Test"
