--- a/source_data/instances/vital_signs/pulsepr.yaml
+++ b/source_data/instances/vital_signs/pulsepr.yaml
@@ -1,7 +1,7 @@
 ---
 #BMI
 - name: "Pulse Pressure"
-  :identifier: "PULSEPR"
+  identifier: "PULSEPR"
   based_on: "Base Observation"
   identified_by:  
     name: "Test"
