--- a/source_data/instances/vital_signs/temp.yaml
+++ b/source_data/instances/vital_signs/temp.yaml
@@ -1,7 +1,7 @@
 ---
 #TEMP
 - name: "Temperature"
-  :identifier: "TEMP"
+  identifier: "TEMP"
   based_on: "Base Observation"
   identified_by:  
     name: "Test"
