--- a/source_data/instances/vital_signs/wstcir.yaml
+++ b/source_data/instances/vital_signs/wstcir.yaml
@@ -1,7 +1,7 @@
 ---
 #WEIGHT
 - name: "Waist Circumference"
-  :identifier: "WSTCIR"
+  identifier: "WSTCIR"
   based_on: "Base Observation"
   identified_by:  
     name: "Test"
