--- a/source_data/instances/vital_signs/bmi.yaml
+++ b/source_data/instances/vital_signs/bmi.yaml
@@ -1,7 +1,7 @@
 ---
 #BMI
 - name: "BMI"
-  :identifier: "BMI"
+  identifier: "BMI"
   based_on: "Base Observation"
   identified_by:  
     name: "Test"
