--- a/source_data/instances/vital_signs/crwnheel.yaml
+++ b/source_data/instances/vital_signs/crwnheel.yaml
@@ -1,7 +1,7 @@
 ---
 #WEIGHT
 - name: "Forearm Circumference"
-  :identifier: "FARMCIR"
+  identifier: "FARMCIR"
   based_on: "Base Observation"
   identified_by:  
     name: "Test"
