--- a/source_data/instances/vital_signs/fthr.yaml
+++ b/source_data/instances/vital_signs/fthr.yaml
@@ -1,7 +1,7 @@
 ---
 #WEIGHT
 - name: "Fetal Heart Rate"
-  :identifier: "FTHR"
+  identifier: "FTHR"
   based_on: "Base Observation"
   identified_by:  
     name: "Test"
