--- a/source_data/instances/vital_signs/hdcirc.yaml
+++ b/source_data/instances/vital_signs/hdcirc.yaml
@@ -1,7 +1,7 @@
 ---
 #WEIGHT
 - name: "Head Circumference"
-  :identifier: "HDCIRC"
+  identifier: "HDCIRC"
   based_on: "Base Observation"
   identified_by:  
     name: "Test"
