--- a/source_data/instances/vital_signs/lbm.yaml
+++ b/source_data/instances/vital_signs/lbm.yaml
@@ -1,7 +1,7 @@
 ---
 #WEIGHT
 - name: "Lean Body Mass"
-  :identifier: "LBM"
+  identifier: "LBM"
   based_on: "Base Observation"
   identified_by:  
     name: "Test"
