--- a/source_data/instances/vital_signs/map.yaml
+++ b/source_data/instances/vital_signs/map.yaml
@@ -1,7 +1,7 @@
 ---
 #BMI
 - name: "Mean Arterial Pressure"
-  :identifier: "MAP"
+  identifier: "MAP"
   based_on: "Base Observation"
   identified_by:  
     name: "Test"
