--- a/source_data/instances/vital_signs/muarmcir.yaml
+++ b/source_data/instances/vital_signs/muarmcir.yaml
@@ -1,7 +1,7 @@
 ---
 #WEIGHT
 - name: "Mid-Upper Arm Circumference"
-  :identifier: "MUARMCIR"
+  identifier: "MUARMCIR"
   based_on: "Base Observation"
   identified_by:  
     name: "Test"
