--- a/source_data/instances/vital_signs/sysbp.yaml
+++ b/source_data/instances/vital_signs/sysbp.yaml
@@ -1,6 +1,6 @@
 ---
 - name: "Systolic Blood Pressure"
-  :identifier: "SYSBP"
+  identifier: "SYSBP"
   based_on: "Base Observation"
   identified_by:  
     name: "Test"
