--- a/source_data/instances/vital_signs/ulnarl.yaml
+++ b/source_data/instances/vital_signs/ulnarl.yaml
@@ -1,7 +1,7 @@
 ---
 #WEIGHT
 - name: "Ulnar Length"
-  :identifier: "ULNARL"
+  identifier: "ULNARL"
   based_on: "Base Observation"
   identified_by:  
     name: "Test"
